# mcv

./: README.md  pyproject.toml
mcv-base/: README.md  pyproject.toml
mcv-base/src/mcv/: __init__.py  base.py  scaling.py
mcv-base/tests/: test_base.py  test_scaling.py
mcv-color/: README.md  pyproject.toml
mcv-color/src/mcv/: __init__.py  color.py
mcv-color/tests/: test_color.py
mcv-image/: README.md  pyproject.toml
mcv-image/src/mcv/: __init__.py  image.py
mcv-image/tests/: test_image.py
mcv-paddle/: README.md  pyproject.toml
mcv-paddle/src/mcv/: __init__.py  paddle.py
mcv-paddle/tests/: test_paddle.py
mcv-rapid/: README.md  pyproject.toml
mcv-rapid/src/mcv/: __init__.py  rapid.py
mcv-rapid/tests/: test_rapid.py
