[project]
name = "mcv-color"
version = "0.1.0"
description = "Multi-point color template matching for MCV"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "mcv-base",
    "numpy",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcv"]

[tool.uv.sources]
mcv-base = { workspace = true }
