[project]
name = "mcv-paddle"
version = "0.1.0"
description = "PaddleOCR backend for MCV"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "mcv-base",
    "numpy>=1.20.0",
]

[project.optional-dependencies]
paddleocr = [
    "paddleocr>=2.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcv"]

[tool.uv.sources]
mcv-base = { workspace = true }
