[project]
name = "mcv-rapid"
version = "0.1.0"
description = "RapidOCR backend for MCV"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "mcv-base",
    "numpy>=1.20.0",
]

[project.optional-dependencies]
rapidocr = [
    "rapidocr>=1.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcv"]

[tool.uv.sources]
mcv-base = { workspace = true }
